force-app/main/default/objects/KimbleOne__MenuCommand__c/KimbleOne__MenuCommand__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Menu Command</label>
    <nameField>
        <label>Menu Command Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Menu Commands</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>