force-app/main/default/objects/KimbleOne__MenuCommand__c/fields/KimbleOne__CommandText__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CommandText__c</fullName>
    <label>Command Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>