force-app/main/default/objects/KimbleOne__MenuCommand__c/fields/KimbleOne__HelpFileUrl__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HelpFileUrl__c</fullName>
    <label>Help File Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>