force-app/main/default/objects/KimbleOne__MenuCommand__c/fields/KimbleOne__MenuCommandType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MenuCommandType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Menu Command Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>MenuCommandType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Menu Commands</relationshipLabel>
    <relationshipName>MenuCommands</relationshipName>
    <type>Lookup</type>
</CustomField>