force-app/main/default/objects/KimbleOne__MenuCommand__c/listViews/By_Argument.listView-meta.xml
<ListView>
    <fullName>By_Argument</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__MenuCommandType__c</columns>
    <columns>KimbleOne__CommandText__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KimbleOne__MenuCommandType__c</field>
        <operation>equals</operation>
        <value>Report</value>
    </filters>
    <label>By Argument</label>
    <language>en_US</language>
</ListView>