force-app/main/default/objects/KimbleOne__MenuCommand__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__CommandText__c</columns>
    <columns>KimbleOne__MenuCommandType__c</columns>
    <columns>KimbleOne__HelpFileUrl__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>